fixed width issues, and overflow x

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 html {
     overflow-y: scroll;
-    /*    overflow-x: hidden;*/
+    overflow-x: hidden;
     font-family: Raleway;
     font-size: 1.2em;
 }
@@ -121,7 +121,7 @@ header {
 
 .content {
     position: relative;
-    width: calc(100% - 363px);
+    width: calc(100% - 360px);
     margin-left: 360px;
 }
 
@@ -147,7 +147,7 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 3em;
+    font-size: 2em;
     color: white;
     font-weight: lighter;
 
@@ -457,12 +457,9 @@ a:hover {
     }
 
     .cover h1 {
-        font-size: 1.1em;
+        font-size: 1.5em;
     }
-    
-    .cover_h1 {
-        font-size: 1.1em;
-    }
+
 
     .social li {
         font-size: 2em;
